--- a/trainingReview.html
+++ b/trainingReview.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProScapes Training</title>
-    <meta name="Description" content="Final Project | WDD 131">
+    <meta name="Description" content="ProScapes Training">
     <meta name="Author" content="Keith Worsham">
     <link rel="stylesheet" href="styles/training.css">
     <link rel="stylesheet" href="styles/trainingLarge.css">
