--- a/blowerO.html
+++ b/blowerO.html
@@ -26,9 +26,7 @@
             <button id="myButton" aria-label="button"></button>
             <ul class="menuLinks">
                 <li><a href="index.html" class="active" id="H">Home</a></li>
-                <li><a href="BlowerO.html" title="blower" id="B">Blower Operation</a></li>
-                <li><a href="BlowerM.html" title="blowerM" id="BM">Blower Maintenance</a></li>
-                <li><a href="trainingForm.html" class="register" title="register" id="R">Register</a></li>
+                <li><a href="BlowerC.html" title="blowerM" id="BM">Blower Maintenance</a></li>
             </ul>  
         </nav>
     </header>
