--- a/trainingForm.html
+++ b/trainingForm.html
@@ -45,7 +45,7 @@
                 <select id="pageSelection" onchange="navigate()">
                     <option value="">Select a page...</option>
                     <option value="">Accident Reporting</option>
-                    <option value="https://ekworsham.github.io/proscapes/blower.html">Blowers</option>
+                    <option value="https://ekworsham.github.io/ProScapes/proscapes/blower.html">Blowers</option> 
                     <option value="">Chains & Hooks</option>
                     <option value="">Chainsaws</option>
                     <option value="">Chemicals</option>
