--- a/blowerC.html
+++ b/blowerC.html
@@ -26,14 +26,13 @@
             <ul class="menuLinks">
                 <li><a href="index.html" class="active" id="H">Home</a></li>
                 <li><a href="BlowerO.html" title="blower" id="B">Blower Operation</a></li>
-                <li><a href="BlowerM.html" title="blowerM" id="BM">Blower Maintenance</a></li>
             </ul>  
         </nav>
     </header>
 
     <main>
 
-        <p class="title">BLOWER MAINTENANCE</p>
+        <p class="title">BLOWER CARE</p>
         
         <div class="part4">
             <img src="images/mechanic.webp" alt="man" width="100" height="100" loading="lazy">
